# roko

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  align_ins.cpp  gen.cpp  generate.cpp  generate2.cpp  generate_features.cpp  models.cpp  note.txt  setup.py  setup2.py  variations.txt
Dependencies/htslib-1.9/: bcf_sr_sort.pico  bgzf.pico  bgzip  config.h  config.mk  config.status  errmod.pico  faidx.pico  hfile.pico  hfile_gcs.pico  hfile_libcurl.pico  hfile_net.pico  hfile_s3.pico  hts.pico  hts_os.pico  htsfile  htslib.pc.tmp  kfunc.pico  knetfile.pico  kstring.pico  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
Dependencies/htslib-1.9/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  rANS_static.pico  sam_header.pico  string_alloc.pico
include/: align_ins.h  generate.h  generate_features.h  models.h
include/roko/: generate.hpp  models.hpp  types.hpp
roko/: NoStorageDataset.py  QuickInferDataset.py  data.py  datasets.py  features.py  features_test.py  inference.py  inference2.py  inference3.py  inference_pos_stats.py  inference_test.py  labels.py  rnn_model.py  rnn_model2.py  rnn_model3.py  rnn_model_pos_stats.py  train.py  train2.py  train3.py  train4.py  train_pos_stats.py
src/: gen.cpp  generate.cpp  models.cpp  types.cpp
(+12 files in other folders)
